# noteomatic

./: .gitignore  README.md  docker-compose-db.yml  nginx-nossl.conf  nginx-ssl.conf  pyproject.toml  setup_ssl.sh
notebooks/: extract.ipynb
scripts/: extract.py  manage.py
src/noteomatic/: __init__.py  app.py  auth.py  config.py  database.py  dependencies.py  lib.py  llm.py  notes.py  pdf.py
src/noteomatic/demo/: app.py  database.py
src/noteomatic/demo/static/: navigation.js  tufte.css
src/noteomatic/demo/templates/: note.html  search.html  shared_note.html  tag.html  tags.html  upload.html
src/noteomatic/templates/: ai_search.html  base.html  edit.html  index.html  login.html  note.html  search.html  tag.html  upload.html
static/: navigation.js  upload.css
