[project]
name = "noteomatic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdfium2>=4.30.0",
    "typer>=0.15.1",
    "litellm>=1.55.3",
    "pillow>=11.0.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "flask>=3.1.0",
    "google-api-python-client>=2.156.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "beautifulsoup4>=4.12.3",
    "graphviz>=0.20.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
