[project]
name = "noteomatic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdfium2>=4.30.0",
    "typer>=0.15.1",
    "litellm>=1.55.9",
    "pillow>=11.0.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "flask>=3.1.0",
    "google-api-python-client>=2.156.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "beautifulsoup4>=4.12.3",
    "graphviz>=0.20.3",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "psycopg>=3.2.3",
    "alembic>=1.14.0",
    "psycopg-binary>=3.2.3",
    "sqlalchemy-utils>=0.41.2",
    "mypy>=1.14.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
